remove fulltext, not supported yet
